correction z-index overlay pour masquer fléches diapo

--- a/src/components/Contactform/contactform.scss
+++ b/src/components/Contactform/contactform.scss
@@ -5,6 +5,7 @@
 .ReactModal__Overlay {
   // classes react-modal
   background-color: grey !important;
+  z-index: 3;
   .ReactModal__Content {
     // classes react-modal
     background-color: white !important;
@@ -48,7 +49,7 @@
           gap: 1.5rem;
         }
 
-        &--labelinput {
+        .contact-form__content--labelinput {
           width: 100%;
           display: flex;
           justify-content: space-between;
@@ -57,6 +58,7 @@
           }
           label {
             width: 20%;
+
             @include mixin.breakpoint(small) {
               width: calc(100% - 20px);
               font-size: 0.75rem;
